Removed the "force input charset" option from K3b. Now that K3b checks the filename encoding this option can only be used to break stuff and, thus, is useless.

BUG: 144566 

svn path=/trunk/extragear/multimedia/k3b/; revision=659528