src/projects/k3bdataimagesettingswidget.cpp
@@ -1,4 +1,4 @@
-/* 
+/*
  *
  * $Id$
  * Copyright (C) 2003 Sebastian Trueg <trueg@k3b.org>
@@ -67,14 +67,12 @@ static const int SYM_FOLLOW = 3;
 
 
 //
-// returns true if the part of the options that is presented in the advanced custom 
+// returns true if the part of the options that is presented in the advanced custom
 // settings dialog is equal. used to determine if some preset is used.
 //
 static bool compareAdvancedOptions( const K3bIsoOptions& o1, const K3bIsoOptions& o2 )
 {
-  return ( o1.forceInputCharset() == o2.forceInputCharset() &&
-	   ( !o1.forceInputCharset() || o1.inputCharset() == o2.inputCharset() ) &&
-	   o1.createRockRidge() == o2.createRockRidge() &&
+  return ( o1.createRockRidge() == o2.createRockRidge() &&
 	   o1.createJoliet() == o2.createJoliet() &&
 	   o1.createUdf() == o2.createUdf() &&
 	   o1.ISOallowLowercase() == o2.ISOallowLowercase() &&
@@ -126,7 +124,7 @@ static void initializePresets()
 class K3bDataImageSettingsWidget::CustomFilesystemsDialog : public KDialogBase
 {
 public:
-  CustomFilesystemsDialog( QWidget* parent ) 
+  CustomFilesystemsDialog( QWidget* parent )
     : KDialogBase( parent,
 		   "custom_filesystems_dialog",
 		   true,
@@ -204,7 +202,7 @@ K3bDataImageSettingsWidget::K3bDataImageSettingsWidget( QWidget* parent, const c
 		   + "<p><b>" + i18n(s_fsPresetNames[2]) + "</b><br>"
 		   + i18n("The file system has additional UDF entries attached to it. This raises the maximal file "
 			  "size to 4 GB. Be aware that the UDF support in K3b is limited.")
-		   + "<p><b>" + i18n(s_fsPresetNames[3]) + "</b><br>" 
+		   + "<p><b>" + i18n(s_fsPresetNames[3]) + "</b><br>"
 		   + i18n("The file system is optimized for compatibility with old systems. That means file names "
 			  "are restricted to 8.3 characters and no symbolic links or file permissions are supported.") );
 }
@@ -279,7 +277,7 @@ void K3bDataImageSettingsWidget::slotFilesystemsChanged()
 
   if( m_comboFilesystems->currentItem() == FS_CUSTOM ) {
     if( !m_customFsDlg->w->m_checkRockRidge->isChecked() ) {
-      KMessageBox::information( this, 
+      KMessageBox::information( this,
 				i18n("<p>Be aware that it is not recommended to disable the Rock Ridge "
 				     "Extensions. There is no disadvantage in enabling Rock Ridge (except "
 				     "for a very small space overhead) but a lot of advantages."
@@ -291,7 +289,7 @@ void K3bDataImageSettingsWidget::slotFilesystemsChanged()
     }
 
     if( !m_customFsDlg->w->m_checkJoliet->isChecked() )
-      KMessageBox::information( this, 
+      KMessageBox::information( this,
 				i18n("<p>Be aware that without the Joliet extensions Windows "
 				     "systems will not be able to display long filenames. You "
 				     "will only see the ISO9660 filenames."
